[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "londec"
version = "0.1.0"
description = "Longenesis Decision Maker — evaluate tree-structured conditions against an ordered history of events"
requires-python = ">=3.10"
dependencies = [
    "mathjson_solver",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["londec"]
